[gd_scene load_steps=5 format=3 uid="uid://2uh4rpfcxpcl"]

[ext_resource type="Texture2D" uid="uid://cb1whw7eijerv" path="res://assets/art/npc/Monster.png" id="1_4a83h"]
[ext_resource type="Script" uid="uid://bl0fwgcjcsthb" path="res://scenes/enemy/enemy.gd" id="1_a3pup"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4a83h"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_a3pup"]
radius = 139.589

[node name="Enemy" type="CharacterBody2D"]
process_mode = 1
script = ExtResource("1_a3pup")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_4a83h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("CircleShape2D_4a83h")
disabled = true

[node name="HurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(3, -1)
shape = SubResource("CircleShape2D_a3pup")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NavTimer" type="Timer" parent="."]
autostart = true

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="HurtArea" to="." method="_on_hurt_area_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_hurt_area_body_exited"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
